2007-07-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Set svn:keywords property.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix "versioned" build on Windows.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
	* src/avframe.h:
	* src/lavfmuxer.cpp:
	* src/lavfmuxer.h:
	* src/main.cpp:
	* src/mpgfile.cpp:
	* src/mpgfile.h:
	* src/psfile.cpp:
	* src/stream.h:
	* src/tsfile.cpp:
		Ffmpeg interface cleanup patch by Wolfram Gloger.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* VERSION:
	* setversion.sh:
		New files.

	* src/SConscript:
	* src/Makefile.w32:
		Generate version.h.

	* src/dvbcut.cpp:
		Include version string in caption.

2007-07-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Reset inbuffer only if there are new input files.

2007-07-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Add explicit dependencies for moc and uil files.

	* numerous other files:
		Add "Id" keyword.

2007-07-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Write to log instead of stderr.
		Redirect log to stderr if there is no GUI.

	* src/logoutput.cpp:
		Simplify code, avoid memory allocations.
		Don't prefix each line with a progress indicator.
 
	* src/mpgfile.cpp:
		Write to log instead of stderr.
 
	* src/progresswindow.cpp:
		Let print("") insert a line break.

2007-07-09  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Export all frames in batch mode if there isn't a project file
		(patch by Ralph Glasstetter).

	* src/main.cpp:
		Allow multiple filenames in batch mode.

2007-07-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Add copyright and license text.

2007-07-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix generation of required files.
